# wordle-inator

./: Cargo.toml  README.md  times
src/: agent.rs  game.rs  main.rs
