[package]
name = "wordle-inator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.7.2"
rayon = "1.5.1"
clap = { version = "3.0", features = ["derive"] }
random-string = "1.0.0"
